2001-10-25  Tim Jenness  <timj@jach.hawaii.edu>

	* Frame.pm (gui_id): Fix warnings when file() is undef

	* Msg/Control/AMS.pm: Use ADAM_NOPROMPT to turn off prompting

2001-10-18  Tim Jenness  <timj@jach.hawaii.edu>

	* Recipe.pm (_parse_recursively): Should not have croak in output
	recipe (use die instead)

2001-09-19  Tim Jenness  <timj@jach.hawaii.edu>

	* Xorac.pm: Change to fixed font since arial is not recognized
	everywhere

2001-09-07  Tim Jenness  <timj@jach.hawaii.edu>

	* Inst/Defn.pm: Add figaro3 and figaro5

2001-09-05  Tim Jenness  <timj@jach.hawaii.edu>

	* Calib/Michelle.pm (_set_index_rules): Forgot about ORAC_DATA_CAL

	* Inst/Defn.pm (orac_determine_primitive_search_path): Add IFU to UIST

2001-08-13  Tim Jenness  <timj@jach.hawaii.edu>

	* General.pm: deg2rad and rad2deg

2001-08-09  Tim Jenness  <timj@jach.hawaii.edu>

	* Recipe.pm (read_recipe): Deal with ambiguity for recipes too

2001-08-08  Tim Jenness  <timj@jach.hawaii.edu>

	* Recipe.pm: Add support for big "switch" statement when a
	primitive name is ambiguous. 

	* Inst/Defn.pm (orac_list_generic_observing_modes): Add new routine

2001-08-07  Tim Jenness  <timj@jach.hawaii.edu>

	* Frame/CGS4.pm (configure): Add support for .I1BEAM components.
	(mergehdr): Allow for case where .MORE is not present

	* Calib/CGS4.pm: Add profile()

	* Calib.pm (readnoise): Add readnoise support

2001-08-06  Tim Jenness  <timj@jach.hawaii.edu>

	* Calib.pm (thing): Add thingone and thingtwo

	* Core.pm (orac_process_frame): use thingone and thingtwo

2001-07-03  Tim Jenness  <timj@jach.hawaii.edu>

	* Frame/Michelle.pm: Comment out DINDEX

	* Inst/Defn.pm (orac_configure_for_instrument): Try to recognise
	IRCAM2 and UFTI2
	(orac_configure_for_instrument): Add UIST

2001-07-02  Tim Jenness  <timj@jach.hawaii.edu>

	* Inst/Defn.pm: Add IRIS2

	* Group/IRIS2.pm: Add

	* Frame/IRIS2.pm: Add

2001-06-25  Tim Jenness  <timj@jach.hawaii.edu>

	* Core.pm: Protect 'new ORAC::Recipe' with a try block
