@@ -1,3 +1,7 @@
+2001-11-01  Tim Jenness  <timj@jach.hawaii.edu>
+
+	* Print.pm (orac_print): Add orac_throw
+
 2001-10-25  Tim Jenness  <timj@jach.hawaii.edu>
 
 	* Frame.pm (gui_id): Fix warnings when file() is undef
